# pokemon-data

./: README.md  pokemon.json  pyproject.toml  script.py
