[tool.poetry]
name = "pokemon-data"
version = "0.1.0"
description = "Crawler retrieving a limited set of information from the PokéAPI"
authors = ["Connor Brinton <connor@brintonium.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boltons = "^21.0.0"
requests = "^2.26.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
